--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.31.4",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "6.14.0",
     "@radix-ui/react-accordion": "1.2.2",
