--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.31.4",
+    "@firebase/auth": "^1.11.0",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "6.14.0",
     "@radix-ui/react-accordion": "1.2.2",
