--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "core": "^1.0.113",
     "cors": "^2.8.5",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
@@ -54,8 +53,10 @@
     "input-otp": "1.4.1",
     "localtunnel": "^2.0.2",
     "lucide-react": "^0.454.0",
+    "mongoose": "^8.18.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "openai": "^5.15.0",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
@@ -82,7 +83,8 @@
     "postcss": "^8.5",
     "prisma": "^6.14.0",
     "tailwindcss": "^4.1.9",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
